# Novaland_Demo

./: .clang-tidy  .gitignore  .gitmodules  Build.py  CMakeLists.txt  ClientMock.py  CreateFiles.py  ServerMock.py
.circleci/: config.yml
Client/: CMakeLists.txt
Client/src/: Client.cpp  Client.h
Client/src/Character/: CharacterContainer.h  CharacterFramework.cpp  CharacterFramework.h  CharacterMessageRx.cpp  CharacterMessageRx.h  CharacterMessageTx.cpp  CharacterMessageTx.h  OwnCharacterFramework.cpp  OwnCharacterFramework.h
Client/src/Character/Components/CharacterFire/: CharacterFireComponent.cpp  CharacterFireComponent.h  NetworkCharacterFireComponent.cpp  NetworkCharacterFireComponent.h
Client/src/Character/Components/CharacterHit/: CharacterHitController.cpp  CharacterHitController.h
Client/src/Character/Components/CharacterInput/: CharacterInputComponent.cpp  CharacterInputComponent.h
Client/src/Character/Components/CharacterInterpolation/: CharacterInterpolation.cpp  CharacterInterpolation.h
Client/src/Character/Components/CharacterReconciliation/: CharacterReconciliation.cpp  CharacterReconciliation.h  CharacterSnapshotQueue.h
Client/src/Character/Lifetime/: CharacterCreator.cpp  CharacterCreator.h  CharacterDestroyer.cpp  CharacterDestroyer.h
Client/src/Game/: GameController.cpp  GameController.h  GameMessageRx.cpp  GameMessageRx.h
Client/src/Input/: InputHandler.cpp  InputHandler.h  InputType.h
Client/src/Networking/: ClientNetworkManager.cpp  ClientNetworkManager.h
Client/src/Player/: ClientPlayer.h  PlayerContainer.h  PlayerCreator.cpp  PlayerCreator.h  PlayerDestroyer.cpp  PlayerDestroyer.h  PlayerMessageRx.cpp  PlayerMessageRx.h  PlayerMessageTx.cpp  PlayerMessageTx.h  PlayerNetworkController.cpp  PlayerNetworkController.h
Client/src/Projectile/: ProjectileCollisionHandler.cpp  ProjectileCollisionHandler.h  ProjectileFramework.cpp  ProjectileFramework.h
Client/src/Projectile/Components/ProjectileHitComponent/: ProjectileHitComponent.cpp  ProjectileHitComponent.h
Client/src/Projectile/Components/ProjectileInterpolation/: ProjectileInterpolation.h
Client/src/Projectile/Components/ProjectileLifeComponent/: ProjectileLifeComponent.h
Client/src/Projectile/Lifetime/: ProjectileCreator.cpp  ProjectileCreator.h  ProjectileDestroyer.cpp  ProjectileDestroyer.h
ClientFlat/: CMakeLists.txt
ClientFlat/src/: ClientC.cpp  Export.h  InputHandlerC.cpp
ClientFlat/src/Character/: CharacterCreatorC.cpp  CharacterDestroyerC.cpp  ClientCharacterC.cpp
ClientFlat/src/Physics/: RigidbodyC.cpp
ClientFlat/src/Projectile/: ProjectileCharacterC.cpp  ProjectileCreatorC.cpp  ProjectileDestroyerC.cpp
ClientGui/: CMakeLists.txt  main.cpp
ClientGui/src/: Application.cpp  Application.h  Window.cpp  Window.h
ClientMock/: CMakeLists.txt  main.cpp
Common/: CMakeLists.txt
Common/src/: DebugStackTrace.h  DependencyInjector.h  Dictionary.h  Logger.cpp  Logger.h  NovalandCommon.h  ObjectPool.h  OverwriteBuffer.h  SpscQueue.h  TSQueue.h
Common/src/UnityLogger/: IUnityInterface.h  IUnityLog.h  UnityLoggerC.cpp  UnityLoggerC.h
Definitions/: NovalandDefinitions.json  definition_server.py
GDClientSrc/: CMakeLists.txt
GDClientSrc/src/: CameraHandler.cpp  CameraHandler.h  GDMacros.h  NLCharacter.cpp  NLCharacter.h  NLCharacterManager.cpp  NLCharacterManager.h  NLNovalandDebug.cpp  NLNovalandDebug.h  NLNovalandRoot.cpp  NLNovalandRoot.h  NLProjectileManager.cpp  NLProjectileManager.h  register_types.cpp
SerializationFiles/: CMakeLists.txt  SerClient.h  SerServer.h  SerShared.h
Server/: CMakeLists.txt  main.cpp
Server/src/: NovalandServer.cpp  NovalandServer.h
Server/src/Character/: CharacterCollisionHandler.cpp  CharacterCollisionHandler.h  CharacterFramework.cpp  CharacterFramework.h  CharacterMessageRx.cpp  CharacterMessageRx.h  CharacterMessageTx.cpp  CharacterMessageTx.h
Server/src/Character/Components/CharacterFire/: CharacterFireComponent.cpp  CharacterFireComponent.h
Server/src/Character/Components/CharacterHit/: CharacterHitController.cpp  CharacterHitController.h
Server/src/Character/Components/CharacterInputComponent/: CharacterInputComponent.cpp  CharacterInputComponent.h
Server/src/Character/Lifetime/: CharacterCreator.cpp  CharacterCreator.h  CharacterDestroyer.cpp  CharacterDestroyer.h
Server/src/Character/SpecialAbility/: ISpecialAbility.h
Server/src/Character/SpecialAbility/Flash/: Flash.cpp  Flash.h  FlashData.h
Server/src/Game/: GameMessageTx.cpp  GameMessageTx.h
Server/src/Networking/: ServerNetworkManager.cpp  ServerNetworkManager.h
Server/src/Player/: PlayerCreator.cpp  PlayerCreator.h  PlayerDestroyer.cpp  PlayerDestroyer.h  PlayerMessageRx.cpp  PlayerMessageRx.h  PlayerMessageTx.cpp  PlayerMessageTx.h  PlayerNetworkController.cpp  PlayerNetworkController.h  ServerPlayer.h
Server/src/Projectile/: ProjectileFramework.cpp  ProjectileFramework.h
Server/src/Projectile/Components/ProjectileLifeComponent/: ProjectileLifeComponent.cpp  ProjectileLifeComponent.h
Server/src/Projectile/Lifetime/: ProjectileCreator.cpp  ProjectileCreator.h  ProjectileDestroyer.cpp  ProjectileDestroyer.h
Server/src/Renderer/: EnvironmentRenderer.cpp  EnvironmentRenderer.h
Shared/: CMakeLists.txt
Shared/src/: GameTags.h  TimeUtils.h
Shared/src/Character/: Character.cpp  Character.h
Shared/src/Definitions/: CharacterDefinition.h  CharacterDefinitionProvider.cpp  CharacterDefinitionProvider.h  DefinitionParser.h  ProjectileDefinition.h  ProjectileDefinitionProvider.cpp  ProjectileDefinitionProvider.h
Shared/src/Entities/: Entity.h
Shared/src/Input/: Input.h
Shared/src/Math/: Math.h  Vec2.h
Shared/src/MessageDispatcher/: MessageBuffer.h  MessageDispatcher.h
Shared/src/Misc/: HttpRequest.h
Shared/src/Networking/: Connection.h  NetworkManager.cpp  NetworkManager.h  NetworkMessage.cpp  NetworkMessage.h
Shared/src/Physics/: Categories.h  ColliderDefinitions.h  CollisionHit.h  CollisionListener.cpp  CollisionListener.h  Map.cpp  Map.h  PhysicsWorld.cpp  PhysicsWorld.h  RaycastBounce.cpp  RaycastBounce.h  Rigidbody.cpp  (+5 more)
(+19 files in other folders)
